--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ owner: Alex Guardado
   # Social networking links used in footer. Update and remove as you like.
   twitter: https://twitter.com/alexjguardado 
   facebook: https://www.facebook.com/alex.j.guardado     
-  github: https://github.com/funkyaxel       
+  github: https://github.com/pintsflightsandbites     
   stackexchange:  
   linkedin: https://www.linkedin.com/in/alex-guardado-30291999       
   instagram: https://instagram.com/alexjguardado      
