--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: http://pintsflightsandbites.com
-title:Pints, Flights & Bites
-description:Describe your website here.
+url:http://pintsflightsandbites.com
+title:Pints,Flights & Bites
+description:
 disqus_shortname:A blog about food, craft beer, arts and culture.
 reading_time:true
 words_per_minute:200
